--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,6 @@
     font-size: var(--text-lg);
   }
 
-  a {
-    color: var(--color-blue-600);
-    text-decoration-line: underline;
-  }
-
   input,
   select {
     border-width: 1px;
@@ -27,5 +22,31 @@
     border-radius: var(--radius-md);
     padding-inline: calc(var(--spacing) * 4);
     padding-block: calc(var(--spacing) * 2);
+  }
+
+  button {
+    width: 100%;
+    border-radius: var(--radius-md);
+    padding: calc(var(--spacing) * 2);
+    color: var(--color-white);
+    cursor: pointer;
+  }
+}
+
+@layer components {
+  .card {
+    width: 100%;
+    background-color: var(--color-white);
+    border-radius: var(--rounded-lg);
+    padding: var(--spacing-6);
+    box-shadow: var(--shadow-xl);
+  }
+
+  .repo-info {
+    display: flex;
+    align-items: center;
+    gap: calc(var(--spacing) * 1);
+    font-size: var(--text-xs);
+    line-height: var(--text-xs--line-height);
   }
 }
